Fix: Remove text align center from input boxes

--- a/src/styles/PostCreateForm.module.css
+++ b/src/styles/PostCreateForm.module.css
@@ -36,10 +36,6 @@
     text-transform: uppercase;
 }
 
-.Input {
-    text-align: center;
-}
-
 .Button {
     color: #FFF;
     background-color:#FF0000;
